--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 #subsuperior{
-    margin-top: 5vh;
+    margin-top: 7.5vh;
 }
 
 #logo{
@@ -23,18 +23,29 @@
 }
 
 #barralinha{
-    border-left: 2vw;
-    border-right: 2vw;
+    padding-left: 6vw;
 }
 
 #tabelalinhas{
-    padding-left: 8vw;
-    padding-right: 8vw;
+    margin-left: 8vw;
+    margin-right: 7vw;
+    padding-right: 1vw;
     margin-top: 10px;
+    overflow-y: scroll;
+    height: 70vh;
+    text-align: center;
+}
+
+th {
+    text-align: center;
 }
 
 .btn-danger{
     background-color: rgb(173, 14, 14);
+}
+
+.botao{
+    margin-left: 0px;
 }
 
 .btn-danger:hover{
@@ -49,46 +60,21 @@
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {height: 90vh}
 
-
 /* Set gray background color and 100% height */
 .sidenav {
-    padding-top: 40px;
+    padding-top: 5px;
     background-color: #c7c2c2;
-    height: 100vh;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow: hidden;
+   height: 92.5vh
 }
-
-
-
-.main-content{
-    margin-left: 25vw;
-}
-
-@media screen and (min-width: 1200px){
-    .main-content{
-        margin-left: 20vw;
-    }
-}
-
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
     .sidenav {
         height: auto;
         padding: 15px;
-        position: relative;
     }
     .row.content {height:auto;}
-
-    .main-content {
-        margin-left: 4vw;
-    }
 }
-
 
 .btn-menu{
     margin-top: 1em;
