Preparing to port to master

--- a/src/views/linhas.ejs
+++ b/src/views/linhas.ejs
@@ -4,7 +4,7 @@
   <title>BusCarlos</title>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<!--<link rel="stylesheet" href="/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="/css/style.css">
 
@@ -33,7 +33,7 @@
 		<div class="row content">
 			<div class=" col-sm-3 col-md-3 col-lg-2 sidenav ">
 				<%for(let i = 0; i < nav.length; i++) {%>
-				<a href="<%= nav[i].link %>" class="btn btn-danger btn-block btn-menu"><%= nav[i].title %></a>
+					<a href="<%= nav[i].link %>" class="btn btn-danger btn-block btn-menu"><%= nav[i].title %></a>
 				<%}%>
 			</div>
 
@@ -100,7 +100,8 @@
 		</div>
 	</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 		<!--<script src="/js/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js" ></script>-->
 </body>
