--- a/src/views/linhas.ejs
+++ b/src/views/linhas.ejs
@@ -24,7 +24,7 @@
 <div class="container-fluid">    
   <div class="row content">
     <div class="col-12 col-sm-4 col-md-4 col-lg-3 col-xl-2 sidenav ">
-      <button type="button" class="btn btn-danger btn-block btn-menu">Busca por linha</button>
+      <button type="button" class="btn btn-danger btn-block btn-menu">Busca por linhas</button>
       <button type="button" class="btn btn-danger btn-block btn-menu">Busca por referência</button>
       <button type="button" class="btn btn-danger btn-block btn-menu">Preferidos</button>
       <button type="button" class="btn btn-danger btn-block btn-menu">Feed de noticias</button>
