--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -14,6 +14,7 @@
     margin: 20px;
 }
 
+
 #login{
     color : rgb(173, 14, 14);
 }
@@ -26,6 +27,17 @@
 #barralinha{
     padding-left: 3vw;
     text-align : center;
+}
+
+
+#tabelalinhas{
+    margin-left: 7vw;
+    margin-right: 7vw;
+    padding-right: 1vw;
+    margin-top: 10px;
+    overflow-y: scroll;
+    height: 70vh;
+    text-align: center;
 }
 
 #tabelareferencias{
@@ -51,6 +63,11 @@ th {
 
 .btn-danger:hover{
     background-color: #910707;
+}
+
+.table-responsive{
+ 	 width: 80vw;
+	 overflow-y:auto;
 }
 
 
