--- a/node/src/views/linhas.ejs
+++ b/node/src/views/linhas.ejs
@@ -13,7 +13,7 @@
                 <form id="barralinha">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9">
-                            <input type="text" class="form-control" placeholder="Busca por linha">
+                            <input type="text" class="form-control" placeholder="Pesquisar uma linha especifica">
                         </div>
                         <div class="col-12  col-sm-12 col-md-12 col-lg-4 col-xl-3">
                             <button type="submit" class="btn btn-danger">Procurar</button>
@@ -36,7 +36,7 @@
                             <tr>
                                 <td class= "text-center"><%=rows[i].numero%></td>
                                 <td class= "text-center"><%=rows[i].nome%></td>
-                                <td class= "text-center">mais informações</td>
+                                <td class= "text-center"><a class="btn btn-info">Info</a></td>
                                 <td class= "text-center">favoritar</td>
                             </tr>
                             <% }%>
