--- a/node/src/views/referencias.ejs
+++ b/node/src/views/referencias.ejs
@@ -1,6 +1,6 @@
-<%- include partials/head.ejs%>
+<% include partials/head.ejs %>
 <body>
-	<%- include partials/navbar.ejs%>
+	<% include partials/navbar.ejs %>
 
 	<div class="container-fluid">
   		<div class="row content">
