--- a/node/src/views/ruas.ejs
+++ b/node/src/views/ruas.ejs
@@ -1,23 +1,19 @@
-<%- include partials/head.ejs %>
+<% include partials/head.ejs %>
 <body>
-<%- include partials/navbar.ejs %>
+<% include partials/navbar.ejs %>
 
     <div class="container-fluid">
         <div class="row content">
-            <%- include partials/sidenav.ejs %>
+            <% include partials/sidenav.ejs %>
 
             <div class=" container-fluid col-12 col-sm-8 col-md-8 col-lg-9 col-xl-10 text-left">
 
-                <h1 id="busca">Busca por rua</h1>
+                <h1 id="busca">Busca por Rua</h1>
 
                 <form id="barralinha">
                     <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9">
-                            <input type="text" class="form-control" placeholder="Busca por rua">
-                        </div>
-                        <div class="col-12  col-sm-12 col-md-12 col-lg-4 col-xl-3">
-                            <button type="submit" class="btn btn-danger">Filtrar</button>
-                            <button type="submit" class="btn btn-danger">Buscar</button>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <input type="text" class="form-control" placeholder="Pesquisar uma rua especifica">
                         </div>
                     </div>
                 </form>
@@ -26,74 +22,17 @@
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th>Numero</th>
-                            <th>Nome</th>
-                            <th>Info</th>
-                            <th>Favorito</th>
+                            <th>Nome da Rua</th>
+                            <th>Informacao das Linhas</th>
                         </tr>
                         </thead>
                         <tbody>
+                        <%for(let i = 0; i < rows.length; i++) { %>
                         <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
+                            <td class= "text-center"><%=rows[i].nome%></td>
+                            <td class= "text-center"><a class="btn btn-info">Info</a></td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>usp campos 1</td>
-                            <td>mais informações</td>
-                            <td>favoritar</td>
-                        </tr>
-
+                        <% }%>
                         </tbody>
                     </table>
                 </div>
