--- a/node/src/views/linhas.ejs
+++ b/node/src/views/linhas.ejs
@@ -13,13 +13,13 @@
                 <form id="barralinha">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                            <input type="text" class="form-control" placeholder="Pesquisar uma linha especifica"></input>
+                            <input class="form-control" id="buscalinha" type="text" placeholder="Buscar linhas especificas...">
                         </div>
                     </div>
                 </form>
 
                 <div id="tabelalinhas">
-                    <table class="table table-hover table-fixed">
+                    <table class="table table-hover table-fixed table-striped">
                         <thead>
                             <tr>
                                 <th>Numero</th>
@@ -33,7 +33,7 @@
                             <tr>
                                 <td class= "text-center"><%=rows[i].numero%></td>
                                 <td class= "text-center"><%=rows[i].nome%></td>
-                                <td class= "text-center"><a href="linhas/<%=rows[i].numero%>" class="btn btn-info">Info</a></td>
+                                <td class= "text-center"><a href="linhas/<%=rows[i].numero%>" class="btn btn-danger">Info</a></td>
                                 <td class= "text-center">favoritar</td>
                             </tr>
                             <% }%>
@@ -49,23 +49,14 @@
     <script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script>
-			function myFunction() {
-				var input, filter, table, tr, td, i;
-				input = document.getElementById("buscalinha");
-				filter = input.value.toUpperCase();
-				table = document.getElementById("tabelalinhas");
-				tr = table.getElementsByTagName("tr");
-				for (i = 0; i < tr.length; i++) {
-					td = tr[i].getElementsByTagName("td")[1];
-					if (td) {
-						if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
-								tr[i].style.display = "";
-						} else {
-								tr[i].style.display = "none";
-						}
-					}       
-				}
-			}
-		</script>
+        $(document).ready(function(){
+          $("#buscalinha").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#tabelalinhas tr").filter(function() {
+              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+    </script>
     </body>
 </html>
