--- a/node/src/views/ruas.ejs
+++ b/node/src/views/ruas.ejs
@@ -19,7 +19,7 @@
                 </form>
 
                 <div id="tabelaruas">
-                    <table class="table table-hover table-fixed table-striped">
+                    <table class="table table-hover table-fixed">
                         <thead>
                         <tr>
                             <th>Nome da Rua</th>
@@ -48,7 +48,7 @@
 		$(document).ready(function(){
 			$("#buscarua").on("keyup", function() {
 				var value = $(this).val().toLowerCase();
-				$("#tabelaruas tr").filter(function() {
+				$("#tabelaruas tbody tr").filter(function() {
 					$(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
 				});
 			});
