--- a/node/src/views/linha.ejs
+++ b/node/src/views/linha.ejs
@@ -14,25 +14,51 @@
         <div class="row content">
             <% include partials/sidenav.ejs %>
 
-            <div class=" container-fluid col-12 col-sm-8 col-md-8 col-lg-9 col-xl-10 text-left">
+            <div class=" container-fluid col-12 col-sm-8 col-md-8 col-lg-9 col-xl-10">
 
                 <h1 id="busca">Linha <%= rows[0].numero %> - <%= rows[0].nome %> </h1>
 
-                <div id="tabelalinhas">
-                    <table class="table table-hover table-fixed">
-                        <thead>
-                            <tr>
-                                <th>Itinerario</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <%for(let i = 0; i < rows.length; i++) { %>
-                            <tr>
-                                <td class= "text-center"><%=rows[i].nome_rua%></td>
-                            </tr>
-                            <% }%>
-                        </tbody>
-                    </table>
+                <h3 id="busca"> HORÁRIOS E ITINERÁRIO </h1>
+                
+                <div style="float: left;" class=" container-fluid col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <div id="tabelahorarios">
+                        <table class="table table-hover table-sm">
+                            <thead>
+                                <tr>
+                                    <th>SEG A SEX</th>
+                                    <th>SAB</th>
+                                    <th>DOM E FERIADOS</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <%for(let i = 0; i < rows.length; i++) { %>
+                                <tr>
+                                    <td> 14:22</td>
+                                    <td> 15:22</td>
+                                    <td> 16:22</td>
+                                </tr>
+                                <% }%>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div style="float: left;" class=" container-fluid col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <div id="tabelaitinerario">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Itinerario</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <%for(let i = 0; i < rows.length; i++) { %>
+                                <tr>
+                                    <td class= "text-center"><%=rows[i].nome_rua%></td>
+                                </tr>
+                                <% }%>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
