Added info on ruas support

--- a/node/src/views/ruas.ejs
+++ b/node/src/views/ruas.ejs
@@ -30,7 +30,7 @@
                         <%for(let i = 0; i < rows.length; i++) { %>
                         <tr>
                             <td class= "text-center"><%=rows[i].nome%></td>
-                            <td class= "text-center"><a href="linhas/<%=rows[i].numero%>" class="btn btn-danger">Info</a></td>
+                            <td class= "text-center"><a href="ruas/<%=rows[i].nome%>" class="btn btn-danger">Info</a></td>
                         </tr>
                         <% }%>
                         </tbody>
